# heroku-docker-haskell-stack-example

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  docker-compose.yml  docker-haskell.cabal  stack.yaml
app/: Main.hs
config/: dev.cfg  dev.conf.sample  heroku.cfg  heroku.conf
migrations/: 1_create_bands.sql
src/: Api.hs  Config.hs  Db.hs  Main.hs
