name:                docker-haskell
version:             0.1.0.0
synopsis:            Example of Haskell application using Docker on Heroku
description:         Please see README.md
homepage:            http://github.com/b0oh/heroku-docker-haskell-stack-example#readme
license:             ISC
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api, Db
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts, FlexibleInstances, GADTs, GeneralizedNewtypeDeriving, MultiParamTypeClasses,
                       OverloadedStrings, QuasiQuotes, TemplateHaskell, TypeFamilies
  build-depends:       base >= 4.7 && < 5
                     , monad-logger
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , resource-pool
                     , Spock
                     , text

executable docker-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, docker-haskell
