name:                docker-haskell
version:             0.1.0.0
synopsis:            Example of Haskell application using Docker on Heroku
description:         Please see README.md
homepage:            https://github.com/meatmachine/docker-haskell#readme
license:             ISC
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Api, Db
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , lifted-base
                     , postgresql-simple
                     , postgresql-simple-migration
                     , Spock
                     , text

executable docker-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base, docker-haskell
                     , bytestring
